// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion should render Elevate correctly 1`] = `
<div>
  <div
    class="flex flex-col"
  >
    <div
      class="flex w-full flex-col gap-gap-md"
    >
      <div
        class="flex flex-col w-full overflow-hidden focus-visible:outline-1 focus-visible:outline-opacity-red-100  rounded-1200 bg-opacity-white-800 shadow-330 border-opacity-black-100 border-x-none"
        data-id="this-is-the-title"
        tabindex="0"
      >
        <div
          class="flex cursor-pointer items-center justify-between gap-general-lg p-general-lg hover:bg-opacity-black-75 active:bg-opacity-black-100 border-opacity-black-100"
          data-testid="toggle-expand"
        >
          <div
            class="flex"
            data-testid="icon"
          >
            <svg
              height="24"
              role="img"
              viewBox="0 0 32 32"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.156 18.297c.508 0 .938-.39.938-.938a.95.95 0 0 0-.938-.937.95.95 0 0 0-.937.937c0 .547.43.938.937.938m-10.351 0c.508 0 .937-.39.937-.938a.95.95 0 0 0-.937-.937.95.95 0 0 0-.938.937c0 .547.43.938.938.938m10.703-5.625c3.203 1.758 5.39 5 5.742 8.828H4.75c.313-3.828 2.5-7.07 5.703-8.828L8.578 9.43a.36.36 0 0 1 0-.39q.117-.235.352-.235c.156 0 .273.117.351.234l1.875 3.281a11.86 11.86 0 0 1 9.649 0l1.875-3.28c.078-.118.195-.235.351-.235q.235 0 .352.234a.36.36 0 0 1 0 .39z"
              />
            </svg>
          </div>
          <div
            class="flex w-full flex-col items-start gap-general-xs"
          >
            <p
              class="font-regular text-typography-default text-body-md leading-body-md space-y-paragraphSpacing-body-md overflow-hidden"
            >
              Title goes here
            </p>
            <p
              class="font-regular text-body-sm leading-body-sm space-y-paragraphSpacing-body-sm overflow-hidden text-typography-subtle"
            >
              Subtitle goes here
            </p>
          </div>
          <div
            class="cursor-pointer transition-all duration-[160ms] ease-[cubic-bezier(0.72,_0,_0.24,_1)]"
            data-testid="chevron"
          >
            <svg
              height="24"
              role="img"
              viewBox="0 0 32 32"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.43 21.969a.66.66 0 0 1-.899 0l-7.5-7.5a.66.66 0 0 1 0-.899.66.66 0 0 1 .899 0L16 20.64l7.031-7.07a.66.66 0 0 1 .899 0 .66.66 0 0 1 0 .899z"
              />
            </svg>
          </div>
        </div>
        <div
          class="max-h-[0px] overflow-hidden transition-all duration-[160ms] ease-[cubic-bezier(0.72,_0,_0.24,_1)]"
          data-testid="expanded-content"
        >
          <div
            class="flex h-fit p-general-lg"
          >
            <img
              alt="Placeholder"
              class="flex w-full flex-1"
              src="https://placehold.co/640x320"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion should render Fill correctly 1`] = `
<div>
  <div
    class="flex flex-col"
  >
    <div
      class="flex w-full flex-col gap-gap-md"
    >
      <div
        class="flex flex-col w-full overflow-hidden focus-visible:outline-1 focus-visible:outline-opacity-red-100  rounded-1200 bg-solid-slate-50 border-opacity-black-100 border-x-none"
        data-id="this-is-the-title"
        tabindex="0"
      >
        <div
          class="flex cursor-pointer items-center justify-between gap-general-lg p-general-lg hover:bg-opacity-black-75 active:bg-opacity-black-100 border-opacity-black-100"
          data-testid="toggle-expand"
        >
          <div
            class="flex"
            data-testid="icon"
          >
            <svg
              height="24"
              role="img"
              viewBox="0 0 32 32"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.156 18.297c.508 0 .938-.39.938-.938a.95.95 0 0 0-.938-.937.95.95 0 0 0-.937.937c0 .547.43.938.937.938m-10.351 0c.508 0 .937-.39.937-.938a.95.95 0 0 0-.937-.937.95.95 0 0 0-.938.937c0 .547.43.938.938.938m10.703-5.625c3.203 1.758 5.39 5 5.742 8.828H4.75c.313-3.828 2.5-7.07 5.703-8.828L8.578 9.43a.36.36 0 0 1 0-.39q.117-.235.352-.235c.156 0 .273.117.351.234l1.875 3.281a11.86 11.86 0 0 1 9.649 0l1.875-3.28c.078-.118.195-.235.351-.235q.235 0 .352.234a.36.36 0 0 1 0 .39z"
              />
            </svg>
          </div>
          <div
            class="flex w-full flex-col items-start gap-general-xs"
          >
            <p
              class="font-regular text-typography-default text-body-md leading-body-md space-y-paragraphSpacing-body-md overflow-hidden"
            >
              Title goes here
            </p>
            <p
              class="font-regular text-body-sm leading-body-sm space-y-paragraphSpacing-body-sm overflow-hidden text-typography-subtle"
            >
              Subtitle goes here
            </p>
          </div>
          <div
            class="cursor-pointer transition-all duration-[160ms] ease-[cubic-bezier(0.72,_0,_0.24,_1)]"
            data-testid="chevron"
          >
            <svg
              height="24"
              role="img"
              viewBox="0 0 32 32"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.43 21.969a.66.66 0 0 1-.899 0l-7.5-7.5a.66.66 0 0 1 0-.899.66.66 0 0 1 .899 0L16 20.64l7.031-7.07a.66.66 0 0 1 .899 0 .66.66 0 0 1 0 .899z"
              />
            </svg>
          </div>
        </div>
        <div
          class="max-h-[0px] overflow-hidden transition-all duration-[160ms] ease-[cubic-bezier(0.72,_0,_0.24,_1)]"
          data-testid="expanded-content"
        >
          <div
            class="flex h-fit p-general-lg"
          >
            <img
              alt="Placeholder"
              class="flex w-full flex-1"
              src="https://placehold.co/640x320"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion should render Flush correctly 1`] = `
<div>
  <div
    class="flex flex-col"
  >
    <div
      class="flex w-full flex-col gap-gap-md"
    >
      <div
        class="flex flex-col w-full overflow-hidden focus-visible:outline-1 focus-visible:outline-opacity-red-100  border-100 border-b-opacity-black-100 !border-t-none border-opacity-black-100 border-x-none"
        data-id="this-is-the-title"
        tabindex="0"
      >
        <div
          class="flex cursor-pointer items-center justify-between gap-general-lg p-general-lg hover:bg-opacity-black-75 active:bg-opacity-black-100 border-opacity-black-100 rounded-50"
          data-testid="toggle-expand"
        >
          <div
            class="flex"
            data-testid="icon"
          >
            <svg
              height="24"
              role="img"
              viewBox="0 0 32 32"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.156 18.297c.508 0 .938-.39.938-.938a.95.95 0 0 0-.938-.937.95.95 0 0 0-.937.937c0 .547.43.938.937.938m-10.351 0c.508 0 .937-.39.937-.938a.95.95 0 0 0-.937-.937.95.95 0 0 0-.938.937c0 .547.43.938.938.938m10.703-5.625c3.203 1.758 5.39 5 5.742 8.828H4.75c.313-3.828 2.5-7.07 5.703-8.828L8.578 9.43a.36.36 0 0 1 0-.39q.117-.235.352-.235c.156 0 .273.117.351.234l1.875 3.281a11.86 11.86 0 0 1 9.649 0l1.875-3.28c.078-.118.195-.235.351-.235q.235 0 .352.234a.36.36 0 0 1 0 .39z"
              />
            </svg>
          </div>
          <div
            class="flex w-full flex-col items-start gap-general-xs"
          >
            <p
              class="font-regular text-typography-default text-body-md leading-body-md space-y-paragraphSpacing-body-md overflow-hidden"
            >
              Title goes here
            </p>
            <p
              class="font-regular text-body-sm leading-body-sm space-y-paragraphSpacing-body-sm overflow-hidden text-typography-subtle"
            >
              Subtitle goes here
            </p>
          </div>
          <div
            class="cursor-pointer transition-all duration-[160ms] ease-[cubic-bezier(0.72,_0,_0.24,_1)]"
            data-testid="chevron"
          >
            <svg
              height="24"
              role="img"
              viewBox="0 0 32 32"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.43 21.969a.66.66 0 0 1-.899 0l-7.5-7.5a.66.66 0 0 1 0-.899.66.66 0 0 1 .899 0L16 20.64l7.031-7.07a.66.66 0 0 1 .899 0 .66.66 0 0 1 0 .899z"
              />
            </svg>
          </div>
        </div>
        <div
          class="max-h-[0px] overflow-hidden transition-all duration-[160ms] ease-[cubic-bezier(0.72,_0,_0.24,_1)]"
          data-testid="expanded-content"
        >
          <div
            class="flex h-fit p-general-lg"
          >
            <img
              alt="Placeholder"
              class="flex w-full flex-1"
              src="https://placehold.co/640x320"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion should render Outline correctly 1`] = `
<div>
  <div
    class="flex flex-col"
  >
    <div
      class="flex w-full flex-col gap-gap-md"
    >
      <div
        class="flex flex-col w-full overflow-hidden focus-visible:outline-1 focus-visible:outline-opacity-red-100  rounded-1200 border-sm border-opacity-black-100 border-x-none"
        data-id="this-is-the-title"
        tabindex="0"
      >
        <div
          class="flex cursor-pointer items-center justify-between gap-general-lg p-general-lg hover:bg-opacity-black-75 active:bg-opacity-black-100 border-opacity-black-100"
          data-testid="toggle-expand"
        >
          <div
            class="flex"
            data-testid="icon"
          >
            <svg
              height="24"
              role="img"
              viewBox="0 0 32 32"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.156 18.297c.508 0 .938-.39.938-.938a.95.95 0 0 0-.938-.937.95.95 0 0 0-.937.937c0 .547.43.938.937.938m-10.351 0c.508 0 .937-.39.937-.938a.95.95 0 0 0-.937-.937.95.95 0 0 0-.938.937c0 .547.43.938.938.938m10.703-5.625c3.203 1.758 5.39 5 5.742 8.828H4.75c.313-3.828 2.5-7.07 5.703-8.828L8.578 9.43a.36.36 0 0 1 0-.39q.117-.235.352-.235c.156 0 .273.117.351.234l1.875 3.281a11.86 11.86 0 0 1 9.649 0l1.875-3.28c.078-.118.195-.235.351-.235q.235 0 .352.234a.36.36 0 0 1 0 .39z"
              />
            </svg>
          </div>
          <div
            class="flex w-full flex-col items-start gap-general-xs"
          >
            <p
              class="font-regular text-typography-default text-body-md leading-body-md space-y-paragraphSpacing-body-md overflow-hidden"
            >
              Title goes here
            </p>
            <p
              class="font-regular text-body-sm leading-body-sm space-y-paragraphSpacing-body-sm overflow-hidden text-typography-subtle"
            >
              Subtitle goes here
            </p>
          </div>
          <div
            class="cursor-pointer transition-all duration-[160ms] ease-[cubic-bezier(0.72,_0,_0.24,_1)]"
            data-testid="chevron"
          >
            <svg
              height="24"
              role="img"
              viewBox="0 0 32 32"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.43 21.969a.66.66 0 0 1-.899 0l-7.5-7.5a.66.66 0 0 1 0-.899.66.66 0 0 1 .899 0L16 20.64l7.031-7.07a.66.66 0 0 1 .899 0 .66.66 0 0 1 0 .899z"
              />
            </svg>
          </div>
        </div>
        <div
          class="max-h-[0px] overflow-hidden transition-all duration-[160ms] ease-[cubic-bezier(0.72,_0,_0.24,_1)]"
          data-testid="expanded-content"
        >
          <div
            class="flex h-fit p-general-lg"
          >
            <img
              alt="Placeholder"
              class="flex w-full flex-1"
              src="https://placehold.co/640x320"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
